# mc-schematic-converter

./: .gitignore  LICENSE  README.md  convert.py  nbt.py  pyproject.toml
src/mc_schematic_converter/: __init__.py  __main__.py  converter.py  nbt.py
