[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mc-schematic-converter"
version = "0.1.0"
description = "Sponge Schematic v3 to v2 converter for WorldEdit compatibility"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["minecraft", "worldedit", "schematic", "sponge", "nbt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]

[project.scripts]
mc-schematic-converter = "mc_schematic_converter.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mc_schematic_converter"]
